force-app/main/default/objects/Salesforce_Ticket__c/Salesforce_Ticket__c.object-meta.xml
<CustomObject>
    <description>This Object is for Users to report bugs, ask questions related to functionality, and recommend new features.</description>
    <label>Salesforce Ticket</label>
    <nameField>
        <displayFormat>SFT-{000000000}</displayFormat>
        <label>Salesforce Ticket Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Tickets</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>