force-app/main/default/objects/Salesforce_Ticket__c/fields/Basecamp_AI__c.field-meta.xml
<CustomField>
    <fullName>Basecamp_AI__c</fullName>
    <description>If this Salesforce Ticket is Accepted and FSM is assisting, create an item in Basecamp and paste the link here.</description>
    <inlineHelpText>If this Salesforce Ticket is Accepted and FSM is assisting, create an item in Basecamp and paste the link here.</inlineHelpText>
    <label>Basecamp AI</label>
    <type>Url</type>
</CustomField>