force-app/main/default/objects/Salesforce_Ticket__c/fields/Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Closed__c</fullName>
    <description>The Date that this Salesforce Ticket was Resolved or Rejected.</description>
    <inlineHelpText>The Date that this Salesforce Ticket was Resolved or Rejected.</inlineHelpText>
    <label>Date Closed</label>
    <type>Date</type>
</CustomField>