force-app/main/default/objects/Salesforce_Ticket__c/fields/Date_Merged__c.field-meta.xml
<CustomField>
    <fullName>Date_Merged__c</fullName>
    <description>The Date that this Salesforce Ticket was Merged into another Salesforce Ticket.</description>
    <inlineHelpText>The Date that this Salesforce Ticket was Merged into another Salesforce Ticket.</inlineHelpText>
    <label>Date Merged</label>
    <type>Date</type>
</CustomField>