force-app/main/default/objects/Salesforce_Ticket__c/fields/Date_Placed_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Date_Placed_On_Hold__c</fullName>
    <description>The Date that this Salesforce Ticket was placed on hold.</description>
    <inlineHelpText>The Date that this Salesforce Ticket was placed on hold.</inlineHelpText>
    <label>Date Placed On Hold</label>
    <type>Date</type>
</CustomField>