force-app/main/default/objects/Salesforce_Ticket__c/fields/On_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Reason__c</fullName>
    <description>If placing a Salesforce Ticket On Hold, please explain why you are placing it on hold.</description>
    <inlineHelpText>If placing a Salesforce Ticket On Hold, please explain why you are placing it on hold.</inlineHelpText>
    <label>On Hold Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>