force-app/main/default/objects/Salesforce_Ticket__c/fields/Parent_Salesforce_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Parent_Salesforce_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a Lookup to the Salesforce Ticket this ticket was merged into.</description>
    <inlineHelpText>This is a Lookup to the Salesforce Ticket this ticket was merged into.</inlineHelpText>
    <label>Parent Salesforce Ticket</label>
    <referenceTo>Salesforce_Ticket__c</referenceTo>
    <relationshipLabel>Merged Salesforce Tickets</relationshipLabel>
    <relationshipName>Merged_Salesforce_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>