force-app/main/default/objects/Salesforce_Ticket__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>The Requestor can set an initial priority, which can be modified by a Ticket Moderator if appropriate.</description>
    <inlineHelpText>The Requestor can set an initial priority, which can be modified by a Ticket Moderator if appropriate.</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Urgent</fullName>
            </value>
            <value>
                <fullName>2 - High</fullName>
            </value>
            <value>
                <fullName>3 - Medium</fullName>
            </value>
            <value>
                <fullName>4 - Low</fullName>
                <default>true</default>
                <label>4 - Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>