force-app/main/default/objects/Salesforce_Ticket__c/fields/Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Reason__c</fullName>
    <description>If rejecting a Salesforce Ticket, please explain why it is being rejected.</description>
    <inlineHelpText>If rejecting a Salesforce Ticket, please explain why it is being rejected.</inlineHelpText>
    <label>Rejected Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>