force-app/main/default/objects/Salesforce_Ticket__c/fields/Request_Description__c.field-meta.xml
<CustomField>
    <fullName>Request_Description__c</fullName>
    <description>Explain your request here. Files and links may be included.</description>
    <inlineHelpText>Explain your request here. Files and links may be included.</inlineHelpText>
    <label>Request Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>