force-app/main/default/objects/Salesforce_Ticket__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is auto-populated on creation to identify who made the request. Reach out to a Salesforce Ticket Moderator Chatter.</description>
    <inlineHelpText>This field is auto-populated on creation to identify who made the request. Reach out to a Salesforce Ticket Moderator Chatter.</inlineHelpText>
    <label>Requester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Salesforce_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>