force-app/main/default/objects/Salesforce_Ticket__c/fields/Requester_Name__c.field-meta.xml
<CustomField>
    <fullName>Requester_Name__c</fullName>
    <formula>BLANKVALUE(Requester__r.FirstName + &apos; &apos;, &apos;&apos;) + Requester__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requester Name</label>
    <type>Text</type>
</CustomField>