force-app/main/default/objects/Salesforce_Ticket__c/fields/Resolution_Actions__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Actions__c</fullName>
    <description>Explain what was done to resolve the request here. Files and links may be included.</description>
    <inlineHelpText>Explain what was done to resolve the request here. Files and links may be included.</inlineHelpText>
    <label>Resolution Actions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>