force-app/main/default/objects/Salesforce_Ticket__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Only Ticket Moderators should make adjustments to the Status. If Resolving, Rejecting, Placing On Hold, or Merging Salesforce Tickets, please use the respective Quick Actions.</description>
    <inlineHelpText>Only Ticket Moderators should make adjustments to the Status. If Resolving, Rejecting, Placing On Hold, or Merging Salesforce Tickets, please use the respective Quick Actions.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Merged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>