force-app/main/default/objects/Salesforce_Ticket__c/fields/Type_of_Request__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Request__c</fullName>
    <description>The Type of Request helps the moderators to identify priority and appropriately address your request.</description>
    <inlineHelpText>The Type of Request helps the moderators to identify priority and appropriately address your request.</inlineHelpText>
    <label>Type of Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Problem/Error</fullName>
            </value>
            <value>
                <fullName>Feedback/Question</fullName>
            </value>
            <value>
                <fullName>New Feature Request</fullName>
            </value>
            <value>
                <fullName>Config Audits &amp; Changes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>