force-app/main/default/objects/Salesforce_Ticket__c/validationRules/Must_Have_Closed_Date_to_Close.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Have_Closed_Date_to_Close</fullName>
    <active>true</active>
    <description>A Salesforce Ticket must have a Closed Date to be marked Resolved or Rejected.</description>
    <errorConditionFormula>ISBLANK(Date_Closed__c) &amp;&amp;
(TEXT(Status__c) = &apos;Resolved&apos; ||
TEXT(Status__c) = &apos;Rejected&apos;)</errorConditionFormula>
    <errorMessage>A Salesforce Ticket must have a Closed Date to be marked Resolved or Rejected.</errorMessage>
</ValidationRule>