force-app/main/default/objects/Salesforce_Ticket__c/validationRules/Must_Have_Hold_Date_to_Place_on_Hold.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Have_Hold_Date_to_Place_on_Hold</fullName>
    <active>true</active>
    <description>A Salesforce Ticket must have a Date Placed on Hold to be placed On Hold.</description>
    <errorConditionFormula>ISBLANK(Date_Placed_On_Hold__c) &amp;&amp;
TEXT(Status__c) = &apos;On Hold&apos;</errorConditionFormula>
    <errorMessage>A Salesforce Ticket must have a Date Placed on Hold to be placed On Hold.</errorMessage>
</ValidationRule>