force-app/main/default/objects/Salesforce_Ticket__c/validationRules/TriggerFaultPathErrorSFT_DoNotDeploy.validationRule-meta.xml
<ValidationRule>
    <fullName>TriggerFaultPathErrorSFT_DoNotDeploy</fullName>
    <active>false</active>
    <errorConditionFormula>true</errorConditionFormula>
    <errorMessage>Your Fault SFT!</errorMessage>
</ValidationRule>