force-app/main/default/objects/Salesforce_Ticket__c/listViews/Accepted_Tickets.listView-meta.xml
<ListView>
    <fullName>Accepted_Tickets</fullName>
    <columns>NAME</columns>
    <columns>Type_of_Request__c</columns>
    <columns>Status__c</columns>
    <columns>Resolution_Actions__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Salesforce_Application__c</columns>
    <columns>Requester__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </filters>
    <label>Accepted Tickets</label>
</ListView>