force-app/main/default/objects/Salesforce_Ticket__c/listViews/Default_Salesforce_Ticket_Queue_Salesforce_Ticket1.listView-meta.xml
<ListView>
    <fullName>Default_Salesforce_Ticket_Queue_Salesforce_Ticket1</fullName>
    <filterScope>Queue</filterScope>
    <label>Default Salesforce Ticket Queue</label>
    <queue>Default_Salesforce_Ticket_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>