force-app/main/default/objects/Salesforce_Ticket__c/listViews/My_Tickets.listView-meta.xml
<ListView>
    <fullName>My_Tickets</fullName>
    <columns>NAME</columns>
    <columns>Type_of_Request__c</columns>
    <columns>Status__c</columns>
    <columns>Resolution_Actions__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Salesforce_Application__c</columns>
    <columns>Requester__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Resolved,Rejected</value>
    </filters>
    <label>My Tickets</label>
</ListView>